CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(myapp)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)

# for run on other system
SET(BUILD_SHARED_LIBS ON)
SET(CMAKE_EXE_LINKER_FLAGS ${CMAKE_EXE_LINKER_FLAGS})

# sajjad library
ADD_LIBRARY(sajjad SHARED sajjad.cpp) # for make .so library file
ADD_EXECUTABLE(myapp main.cpp)
TARGET_LINK_LIBRARIES(myapp sajjad)

# opencv library
FIND_PACKAGE(OpenCV REQUIRED)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(sajjad ${OpenCV_LIBS})
